# luminos

./: .env  .gitignore  luminos.py  meson.build  mypy.ini  pytest.ini  requirements.dev.txt  requirements.txt  rfcomm-client.py  rfcomm-server.py  setup.py  tox.ini
data/: gschemas.compiled  luminos.yml  meson.build  resources.qrc
luminos/: Application.py  meson.build
luminos/browser/: meson.build
luminos/browser/webengine/: meson.build
luminos/core/: meson.build
luminos/plugins/luminos/: luminos.py
luminos/plugins/websocket/: websocket.py
luminos/utils/: earlyinit.py  log.py  meson.build
luminos/widgets/: meson.build
luminos/windows/: BrowserWindow.py  meson.build
misc/requirements/: requirements-tests.txt
plugins/bluetooth/javascripts/: bluetooth.js
plugins/luminos/: luminos.py
scripts/: setupcommon.py
tests/: widgets.py  window_tests.py
tests/unit/plugins/: bluetooth_test.py
tests/unit/utils/: config_test.py  standarddir_test.py  utils_test.py
